Folder structure finished

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,1 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Oi Fran, sou a API que irá resolver sua vida, pelo menos em parte... Nasci!</h1>
